# ml-utils

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pytest.ini  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
src/mlutils/lightning/: cifar.py
src/mlutils/pytorch/: data.py
src/mlutils/wandb/: download_wandb_project.py
tests/lightning/: test_cifar.py
tests/pytorch/: test_data.py
