[metadata]
name = mlutils
version = 0.0.2
author = Adam Tupper
author_email = adam.tupper.1@ulaval.ca
description = A collection of utility functions and classes for ML projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adamtupper/ml-utils
project_urls =
    Bug Tracker = https://github.com/adamtupper/ml-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=1.3.3
    pytorch-lightning>=1.4.8
    torch>=1.9.1
    torchvision>=0.10.1
    wandb>=0.12.2

[options.extras_require]
dev = pre-commit; pytest; pytest-cov

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wandb-dl = mlutils.wandb.download_wandb_project:run
